--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,9 +1,3 @@
-<navbar></navbar>
-<header>
-  <hero></hero>
-</header>
-<main>
-  <div>
-    <h1>Found in {{ $ctrl.name }}.html</h1>
-  </div>
-</main>
+<h1 style="padding: 8px 16px;">ngBlankUI - Modern Angular UI Components for faster development</h1>
+
+<h3 style="padding: 8px 16px;">ngBlankUI is a library for unification of development of visual components and user interaction on web applications, done with relative ease and speed. The goal of this library is to provide easy to use components built with the help of AngularJS and made available as AngularJS-native UI components.</h3>
