Button theming options

--- a/client/app/common/common.scss
+++ b/client/app/common/common.scss
@@ -1,9 +1,29 @@
 // COLORS
-$primaryColor:   #0277bd;
 $accentColor:    #1de9b6;
 $bgColor:        #efefef;
 $darkBgColor:    #263238;
 $lightBgColor:   #37474f;
 $lightTextColor: #f5f5f5;
 $darkTextColor:  #212121;
+
+// THEME MAIN COLORS
+$primaryColor:  #007bff;
+$successColor:  #4CD964;
+$warningColor:  #ff9500;
+$dangerColor:   #ff3b30;
+
+// THEME SUPPORT COLORS
+$defaultSupport:    #E8E8E8;
+$primarySupport:    #0C40E8;
+$successSupport:    #44C24E;
+$warningSupport:    #E87D00;
+$dangerSupport:     #E82D2C;
+
+// DISABLED COLORS
+$defaultDisabled:   #E8E8E8;
+$primaryDisabled:   #83B1E8;
+$successDisabled:   #B2C2B5;
+$warningDisabled:   #E8BF83;
+$dangerDisabled:    #E8B3AF;
+
 
