Switch value binding

--- a/client/app/components/buiSwitch/buiSwitch.html
+++ b/client/app/components/buiSwitch/buiSwitch.html
@@ -1,4 +1,4 @@
-<input id="{{$ctrl.switchId}}" type="checkbox" class="switch">
+<input id="{{$ctrl.switchId}}" type="checkbox" class="switch" ng-model="$ctrl.switchValue">
 <label for="{{$ctrl.switchId}}">
   <span>&nbsp;</span>
 </label>
