Updated README.md and changed switch attributes

--- a/client/app/components/buiSwitch/buiSwitch.html
+++ b/client/app/components/buiSwitch/buiSwitch.html
@@ -1,4 +1,4 @@
-<input id="{{$ctrl.switchId}}" type="checkbox" class="switch" ng-model="$ctrl.switchValue">
-<label for="{{$ctrl.switchId}}">
+<input id="bui-switch-{{$ctrl.id}}" type="checkbox" class="switch" ng-model="$ctrl.value">
+<label for="bui-switch-{{$ctrl.id}}">
   <span>&nbsp;</span>
 </label>
