Added support for ng-model

--- a/client/app/components/buiSwitch/buiSwitch.html
+++ b/client/app/components/buiSwitch/buiSwitch.html
@@ -1,4 +1,4 @@
-<input id="bui-switch-{{$ctrl.id}}" type="checkbox" class="switch" ng-model="$ctrl.value">
+<input id="bui-switch-{{$ctrl.id}}" type="checkbox" class="switch" ng-model="$ctrl.ngModel">
 <label for="bui-switch-{{$ctrl.id}}">
   <span>&nbsp;</span>
 </label>
