--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -4,3 +4,13 @@
 <br>
 <br>
 <h3 style="padding: 8px 16px;">Please go through the docs to get an better idea</h3>
+
+<bui-button class="bui-btn bui-btn-rounded bui-btn-primary">Button</bui-button>
+<bui-checkbox id="tt" ng-model="$ctrl.checkboxvalue">I agree to the terms and conditions</bui-checkbox>
+<br>
+<bui-stepper style="margin-left: 24px;" ng-model="$ctrl.somevalue" diff="21"></bui-stepper>
+<br>
+Somevalue : {{$ctrl.somevalue}}
+<br>
+<br>
+<bui-input type="text" placeholder="Placeholder text" ng-model="$ctrl.someinput" style="margin-left: 32px;"></bui-input>
