--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -13,4 +13,8 @@
 Somevalue : {{$ctrl.somevalue}}
 <br>
 <br>
-<bui-input type="text" placeholder="Placeholder text" ng-model="$ctrl.someinput" style="margin-left: 32px;"></bui-input>
+<bui-input type="text" placeholder="Enter your name" ng-model="$ctrl.someinput" style="margin-left: 32px;"></bui-input>
+<br>
+<br>
+<br>
+<bui-dropdown list="$ctrl.list" style="margin-left: 200px;">More</bui-dropdown>
