Basic dropdown componenet

--- a/client/app/components/buiDropdown/buiDropdown.scss
+++ b/client/app/components/buiDropdown/buiDropdown.scss
@@ -1,30 +1,40 @@
 @import './../../common/common.scss';
 
 bui-dropdown {
-    position: relative;
-}
+    margin-left: 400px;
+    position: absolute;
+    
+    .trigger {
+        padding: 8px 16px;
+        border: 1px solid $primaryColor;
+        background: $primaryColor;
+        color: #FFFFFF;
+        border-radius: 5px;
+        position: absolute;
+        cursor: pointer;
 
-bui-dropdown .trigger {
-    background: #FFF;
-    border: 1px solid $primaryColor;
-    border-radius: 2px;
-    color: $primaryColor;
-    cursor: pointer;
-    display: inline-block;
-    padding: 8px 16px;
-    &:hover,
-    &:focus {
-        color: #666;
-        background: #ececec; 
+        &:hover,
+        &:focus {
+            background: #005dc0;
+        }
     }
-}
 
-bui-dropdown ul {
-    padding: 8px 20px;
-    border: 1px solid $primaryColor;
-    border-radius: 2px;
-    li {
-        color: $primaryColor;
-        list-style: none;
+    ul {
+        position: relative;
+        border: 1px solid #999;
+        border-radius: 2px;
+        margin-top: 40px;
+        cursor: pointer;
+        padding: 0;
+        
+        li {
+            background: #FAFAFA;
+            padding: 8px 16px;
+            list-style: none;
+            &:focus,
+            &:hover {
+                background: #EEE;
+            }
+        }
     }
 }
